fixing height and width issues on safari

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,10 @@
   font-family: 'Satoshi', sans-serif;
 }
 
+html, body { height: 100%; }
+.main { min-height: 100dvh; min-width: 100dvw; padding-bottom: env(safe-area-inset-bottom); }
+
+
 #root {
   max-width: none;
   margin: 0;
